--- a/Sobremim.html
+++ b/Sobremim.html
@@ -14,7 +14,7 @@
 
         <h1> Quem é Vini/Vinicius?</h1>
         <div class="imageflex">
-            <a href='https://postimg.cc/SjxgqVbv' target='_blank'><img src='https://i.postimg.cc/bYQWxFCp/IMG-8262.jpg' border='' alt='Foto de Vinicius em uma fantasia de Stitch'/></a>
+            <a href='https://postimg.cc/SjxgqVbv' target='_blank'><img src='https://i.postimg.cc/bYQWxFCp/IMG-8262.jpg'  alt='Foto de Vinicius em uma fantasia de Stitch'/></a>
             <p class="imageflexcontent">Vinicius é uma pessoa alegre, divertida e determinada. Você sempre pode contar com ele, se ele gostar de você.</p>
             <p class="imageflexcontent1" >Ele gosta muito de esportes, musicas, jogos e leitura. Vini sou eu.</p>
 
