adicionado o github no contato

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
             <li>Email : <button onclick="sendEmail()">vinitcavalcantena@gmail.com</button></li>
             <li>Linkedin : <a href="https://www.linkedin.com/in/viniinitc/">linkedin.com/in/viniinitc</a></li>
             <li>Whatsapp : +55 (81) 98730-8449</li>
+            <li>Github: <a href="https://github.com/viniinitc"> github.com/viniinitc</a></li>
         </ul>
         
     </body>
