whatsapp por link adicionado

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <ul>
             <li>Email : <button onclick="sendEmail()">vinitcavalcantena@gmail.com</button></li>
             <li>Linkedin : <a href="https://www.linkedin.com/in/viniinitc/">linkedin.com/in/viniinitc</a></li>
-            <li>Whatsapp : +55 (81) 98730-8449</li>
+            <li>Whatsapp : <a href="https://wa.me/5581987308449"> +55 (81) 98730-8449</a></li>
             <li>Github: <a href="https://github.com/viniinitc"> github.com/viniinitc</a></li>
         </ul>
         
